// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[components] <ActListing /> renders correctly 1`] = `
<article
  class="ActListing"
>
  <a
    class="ActListing-link"
    href="url"
    rel="noopener"
    target="_blank"
  >
    <div
      class="ActListing-details"
    >
      <h3>
        name
      </h3>
      <section
        class="ActListing-meta"
      >
        <div
          class="Meta ActListing-genre"
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align:middle"
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m20 5h10v6.6h-6.6v16.8c0 3.6-3.1 6.6-6.8 6.6s-6.6-3-6.6-6.6 3-6.8 6.6-6.8c1.3 0 2.4 0.4 3.4 1v-17.6z"
              />
            </g>
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Genre
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            genre
          </span>
        </div>
        <div
          class="Meta ActListing-location"
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align:middle"
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m20 19.1q1.7 0 2.9-1.2t1.2-2.9-1.2-2.9-2.9-1.2-2.9 1.2-1.2 2.9 1.2 2.9 2.9 1.2z m0-15.7q4.8 0 8.2 3.4t3.4 8.2q0 2.4-1.2 5.5t-2.9 5.9-3.4 5.1-2.8 3.8l-1.3 1.3q-0.5-0.5-1.2-1.4t-2.9-3.6-3.5-5.2-2.8-5.8-1.2-5.6q0-4.8 3.4-8.2t8.2-3.4z"
              />
            </g>
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Location
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            location name
          </span>
        </div>
      </section>
    </div>
    <figure
      class="ActListing-image"
    >
      <img
        alt="name"
        src="imageUrl"
      />
    </figure>
  </a>
</article>
`;

exports[`[components] <ActListing /> updates \`isRendered\` state after image has loaded 1`] = `
<article
  class="ActListing isRendered"
>
  <a
    class="ActListing-link"
    href="url"
    rel="noopener"
    target="_blank"
  >
    <div
      class="ActListing-details"
    >
      <h3>
        name
      </h3>
      <section
        class="ActListing-meta"
      >
        <div
          class="Meta ActListing-genre"
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align:middle"
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m20 5h10v6.6h-6.6v16.8c0 3.6-3.1 6.6-6.8 6.6s-6.6-3-6.6-6.6 3-6.8 6.6-6.8c1.3 0 2.4 0.4 3.4 1v-17.6z"
              />
            </g>
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Genre
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            genre
          </span>
        </div>
        <div
          class="Meta ActListing-location"
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align:middle"
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m20 19.1q1.7 0 2.9-1.2t1.2-2.9-1.2-2.9-2.9-1.2-2.9 1.2-1.2 2.9 1.2 2.9 2.9 1.2z m0-15.7q4.8 0 8.2 3.4t3.4 8.2q0 2.4-1.2 5.5t-2.9 5.9-3.4 5.1-2.8 3.8l-1.3 1.3q-0.5-0.5-1.2-1.4t-2.9-3.6-3.5-5.2-2.8-5.8-1.2-5.6q0-4.8 3.4-8.2t8.2-3.4z"
              />
            </g>
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Location
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            location name
          </span>
        </div>
      </section>
    </div>
    <figure
      class="ActListing-image"
    >
      <img
        alt="name"
        src="imageUrl"
      />
    </figure>
  </a>
</article>
`;

exports[`[components] <ActListing /> updates \`isRendered\` state and triggers onLoad prop when image has previously been loaded 1`] = `
<article
  class="ActListing isRendered"
>
  <a
    class="ActListing-link"
    href="url"
    rel="noopener"
    target="_blank"
  >
    <div
      class="ActListing-details"
    >
      <h3>
        name
      </h3>
      <section
        class="ActListing-meta"
      >
        <div
          class="Meta ActListing-genre"
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align:middle"
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m20 5h10v6.6h-6.6v16.8c0 3.6-3.1 6.6-6.8 6.6s-6.6-3-6.6-6.6 3-6.8 6.6-6.8c1.3 0 2.4 0.4 3.4 1v-17.6z"
              />
            </g>
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Genre
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            genre
          </span>
        </div>
        <div
          class="Meta ActListing-location"
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align:middle"
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m20 19.1q1.7 0 2.9-1.2t1.2-2.9-1.2-2.9-2.9-1.2-2.9 1.2-1.2 2.9 1.2 2.9 2.9 1.2z m0-15.7q4.8 0 8.2 3.4t3.4 8.2q0 2.4-1.2 5.5t-2.9 5.9-3.4 5.1-2.8 3.8l-1.3 1.3q-0.5-0.5-1.2-1.4t-2.9-3.6-3.5-5.2-2.8-5.8-1.2-5.6q0-4.8 3.4-8.2t8.2-3.4z"
              />
            </g>
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Location
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            location name
          </span>
        </div>
      </section>
    </div>
    <figure
      class="ActListing-image"
    >
      <img
        alt="name"
        src="imageUrl"
      />
    </figure>
  </a>
</article>
`;
